# sonopix

./: .clang-format  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  script.lua
include/: AudioEngine.hpp  Config.hpp  Effects.hpp  MainWindow.hpp  Sonifier.hpp  SonifyEngine.hpp  sonify.hpp  utils.hpp
src/: AudioEngine.cpp  Effects.cpp  MainWindow.cpp  Sonifier.cpp  main.cpp
src/lua/: init.cpp
src/shaders/: image_effects.cpp  image_effects.hpp
stubs/lua/: opts.lua  sonopix.lua
